Increase max width to prevent whitespace

--- a/src/index.css
+++ b/src/index.css
@@ -28,8 +28,7 @@
 
 html,
 body {
-    width: 100%;
-    /* max-width: 1440px; */
+    max-width: 1600px;
     overflow-x: hidden;
 }
 
@@ -63,6 +62,8 @@ main {
 }
 
 .root-container {
+    width: 100%;
+    overflow-x: hidden;
     min-height:100vh;
     overflow-y: hidden;
     --s: 84px;
